@@ -40,6 +40,7 @@ var defaultSites = {
   'The Sydney Morning Herald': 'smh.com.au',
   'The Washington Post': 'washingtonpost.com',
   'The Wall Street Journal': 'wsj.com'
+  'Wired': 'wired.com'
 };
 
 const restrictions = {
@@ -71,7 +72,8 @@ const remove_cookies = [
 'mercurynews.com',
 'theage.com.au',
 'economist.com',
-'bostonglobe.com'
+'bostonglobe.com',
+'wired.com'
 ]
 
 function setDefaultOptions() {
